Add get housing by ID route (#14)
