# docs/swagger.yaml
@@ -191,6 +191,26 @@ paths:
           schema:
             type: string
       summary: Delete a housing by ID
+    get:
+      description: Search for a given housing with its ID
+      parameters:
+      - description: Housing ID
+        in: path
+        name: housing_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Get a housing by ID
     put:
       consumes:
       - application/json
@@ -259,31 +279,6 @@ paths:
           schema:
             type: string
       summary: Update status of housing
-  /housing/{housing_type_id}:
-    get:
-      description: Search all housing of a given type
-      parameters:
-      - description: Housing type ID
-        in: path
-        name: housing_type_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-      summary: Get all housing by type
   /housing/status:
     get:
       description: Search all housing statuses
@@ -368,4 +363,29 @@ paths:
           schema:
             type: string
       summary: Insert a housing type
+  /housing/type/{housing_type_id}:
+    get:
+      description: Search all housing of a given type
+      parameters:
+      - description: Housing type ID
+        in: path
+        name: housing_type_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+      summary: Get all housing by type
 swagger: "2.0"
